/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-11-10 21:52 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/windows.yml
    - there is no CLANG64 shell(?)

  * .github/workflows/macos.yml
    * try to reuse Homebrew libpq via libpq-inherit

2025-11-10 21:39 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/windows.yml
    * switch MSYS2 shell to CLANG64

2025-11-10 21:21 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + base/libpq-inherit/Makefile
    + added pseudo-package to inherit and repackage libpq
      PostgreSQL client library from host package system,
      potential targets are MSYS2 with MSYSTEM=CLANG64(?)
      and macOS Homebrew.

  * .github/workflows/windows.yml
    ! fix missing git tools in MSYS2 shell

2025-11-10 18:39 UTC+0100 Aleksander Czajczynski (hb fki.pl)
 * build/cmake-binary/Makefile
 * build/libduckdb-binary/Makefile
 * build/ninja-binary/Makefile
 * build/zig-binary/Makefile
 * common.mk
   * moved MACHINE= to common.mk, MSYS2 `uname -m` lies on ARM64,
     still returning x86_64, got to check MSYSTEM variable

2025-11-10 17:30 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + .github/workflows/windows-arm64.yml
    + Windows ARM64 runner

  * .github/workflows/macos.yml
    * install libpq from Homebrew

2025-11-09 23:36 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/windows.yml
    * switched libpq to test binary package, don't use otherwise

  * libpq9/patch-01
    * libpq's are largely unbuildable from source on Windows
      using current toolchain, will switch to building libpq
      in separate repo using cl or clang-cl to make packages

  + hbduckdb-wensheng/Makefile
  + hbduckdb-wensheng/patch-00
  + hbduckdb-wensheng/patch-01
    + package DuckDB Harbour wrapper by WenSheng
