@@ -92,6 +92,12 @@ jobs:
           harbour-yaml \
           libpq-inherit \
           harbour-pgsql \
+          libssh2 \
+          libcotp \
+          libduckdb-binary \
+          hbduckdb-wensheng \
+          hbotp-naldodj \
+          hbssh2-alkresin \
           " \
         make install
 
