@@ -86,6 +86,13 @@ jobs:
           harbour-yaml \
           libpq9 \
           harbour-pgsql \
+          openssl \
+          libssh2 \
+          libcotp \
+          libduckdb-binary \
+          hbduckdb-wensheng \
+          hbotp-naldodj \
+          hbssh2-alkresin \
           " \
         make install
 
